Source/MashMaterialCompiler/MaterialParser.output
Terminals which are not used

   ERROR_TOKEN
   TECH_DEFINE_SHADOW_VERTEX


State 99 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce


Grammar

    0 $accept: program_entry $end

    1 @1: /* empty */

    2 program_entry: @1 program_list
    3              | /* empty */

    4 program_list: program
    5             | program_list program

    6 program: MATERIAL IDENTIFIER BEGIN_CS material_statement_list END_CS
    7        | MATERIAL IDENTIFIER COLON IDENTIFIER BEGIN_CS material_ref_statement_list END_CS

    8 technique_declaration: TECHNIQUE IDENTIFIER BEGIN_CS technique_statement_list END_CS

    9 material_ref_statement_list: material_ref_statement
   10                            | material_ref_statement_list material_ref_statement

   11 material_ref_statement: MATERIAL_USER_STRING user_string_list
   12                       | TECHNIQUE IDENTIFIER BEGIN_CS technique_ref_statement_list END_CS
   13                       | sampler_declaration

   14 technique_ref_statement_list: technique_ref_statement
   15                             | technique_ref_statement_list technique_ref_statement

   16 technique_ref_statement: sampler_declaration

   17 material_statement_list: material_statement
   18                        | material_statement_list material_statement

   19 material_statement: LOD_DISTANCE lod_distace_list
   20                   | MESH_LOD_ENABLE bool_types
   21                   | MATERIAL_USER_STRING user_string_list
   22                   | vertex_declaration
   23                   | technique_declaration
   24                   | blend_state_declaration
   25                   | rasterizer_declaration
   26                   | sampler_declaration

   27 user_string_list: user_string
   28                 | user_string_list user_string

   29 user_string: STRING

   30 lod_distace_list: lod_distace
   31                 | lod_distace_list lod_distace

   32 lod_distace: NUMBER_LITERAL

   33 vertex_declaration: TOK_VERTEX BEGIN_CS vertex_element_list END_CS

   34 vertex_element_list: vertex_element
   35                    | vertex_element_list vertex_element

   36 vertex_element: vertex_decl_usage vertex_decl_type optional_digit optional_digit

   37 technique_statement_list: technique_statement
   38                         | technique_statement_list technique_statement

   39 technique_statement: TECH_VERTEX_PROGRAM STRING STRING optional_string
   40                    | TECH_PIXEL_PROGRAM STRING STRING optional_string
   41                    | TECH_GEOMETRY_PROGRAM STRING STRING optional_string
   42                    | TECH_SHADOW_VERTEX_PROGRAM STRING STRING optional_string
   43                    | TECH_DISABLED_SHADOW_EFFECTS technique_shadow_effect_string_list
   44                    | TECH_SHADING_EFFECT STRING
   45                    | TECH_LIGHTING_MODE lighting_types
   46                    | TECH_LOD_LEVEL lod_level_list
   47                    | TECH_GROUP STRING
   48                    | technique_defines technique_define_string_list
   49                    | sampler_declaration
   50                    | vertex_declaration
   51                    | blend_state_declaration
   52                    | rasterizer_declaration

   53 technique_shadow_effect_string_list: /* empty */
   54                                    | technique_shadow_effect_string
   55                                    | technique_shadow_effect_string_list technique_shadow_effect_string

   56 technique_shadow_effect_string: STRING

   57 technique_define_string_list: /* empty */
   58                             | technique_define_string
   59                             | technique_define_string_list technique_define_string

   60 technique_define_string: STRING

   61 rasterizer_declaration: RASTERIZER_DECLARATION BEGIN_CS rasterizer_state_list END_CS

   62 rasterizer_state_list: rasterizer_states
   63                      | rasterizer_state_list rasterizer_states

   64 rasterizer_states: RAST_FILL_MODE fill_modes
   65                  | RAST_CULL_MODE cull_modes
   66                  | RAST_DEPTH_TEST_ENABLED bool_types
   67                  | RAST_DEPTH_WRITE_ENABLED bool_types
   68                  | RAST_DEPTH_CMP depth_cmps
   69                  | RAST_DEPTH_BIAS NUMBER_LITERAL
   70                  | RAST_DEPTH_BIAS_CLAMP NUMBER_LITERAL
   71                  | RAST_SLOPE_SCALED_DEPTH_BIAS NUMBER_LITERAL

   72 fill_modes: FILL_MODE_WIRE_FRAME
   73           | FILL_MODE_SOLID

   74 cull_modes: TOK_NONE
   75           | CULL_MODE_CW
   76           | CULL_MODE_CCW

   77 depth_cmps: DEPTH_CMP_NEVER
   78           | DEPTH_CMP_LESS
   79           | DEPTH_CMP_EQUAL
   80           | DEPTH_CMP_LESS_EQUAL
   81           | DEPTH_CMP_GREATER
   82           | DEPTH_CMP_NOT_EQUAL
   83           | DEPTH_CMP_GREATER_EQUAL
   84           | DEPTH_CMP_ALWAYS

   85 sampler_declaration: sampler_type optional_identifier BEGIN_CS sampler_statement_list END_CS

   86 blend_state_declaration: BLEND_STATE_DECLARATION BEGIN_CS blend_state_list END_CS

   87 blend_state_list: blend_state
   88                 | blend_state_list blend_state

   89 blend_state: BLEND_ENABLED bool_types
   90            | BLEND_SOURCE blend_states_opts
   91            | BLEND_DEST blend_states_opts
   92            | BLEND_OP blend_operations
   93            | BLEND_SOURCE_ALPHA blend_states_opts
   94            | BLEND_DEST_ALPHA blend_states_opts
   95            | BLEND_BLEND_OP_ALPHA blend_operations
   96            | BLEND_MASK write_mask

   97 blend_states_opts: BLEND_OPT_SRC_ALPHA
   98                  | BLEND_OPT_INV_SRC_ALPHA
   99                  | BLEND_OPT_DEST_ALPHA
  100                  | BLEND_OPT_DEST_COLOR
  101                  | BLEND_OPT_INV_DEST_ALPHA
  102                  | BLEND_OPT_INV_SRC_COLOR
  103                  | BLEND_OPT_ONE
  104                  | BLEND_OPT_SRC_ALPHA_SAT
  105                  | BLEND_OPT_SRC_COLOR
  106                  | BLEND_OPT_ZERO
  107                  | BLEND_OPT_INV_DEST_COLOR

  108 blend_operations: BLEND_OP_ADD
  109                 | BLEND_OP_MAX
  110                 | BLEND_OP_MIN
  111                 | BLEND_OP_REV_SUBTRACT
  112                 | BLEND_OP_SUBTRACT

  113 write_mask: MASK_RED
  114           | MASK_GREEN
  115           | MASK_BLUE
  116           | MASK_ALPHA
  117           | MASK_ALL
  118           | TOK_NONE

  119 sampler_statement_list: sampler_statement
  120                       | sampler_statement_list sampler_statement

  121 sampler_statement: SAMPLER_MIN_MAG_FILTER sampler_filter_method_types
  122                  | SAMPLER_MIP_FILTER sampler_filter_method_mip_types
  123                  | SAMPLER_ADDRESS_U texture_address_method_type
  124                  | SAMPLER_ADDRESS_V texture_address_method_type
  125                  | SAMPLER_TEXTURE_FILE STRING
  126                  | SAMPLER_INDEX NUMBER_LITERAL

  127 sampler_filter_method_types: SAMPLER_FILTER_LINEAR
  128                            | SAMPLER_FILTER_POINT

  129 sampler_filter_method_mip_types: SAMPLER_FILTER_LINEAR
  130                                | SAMPLER_FILTER_POINT
  131                                | TOK_NONE

  132 texture_address_method_type: SAMPLER_ADDRESSMODE_CLAMP
  133                            | SAMPLER_ADDRESSMODE_WRAP

  134 sampler_type: SAMPLER2D
  135             | SAMPLERCUBE

  136 lod_level_list: lod_level
  137               | lod_level_list lod_level

  138 technique_defines: TECH_DEFINE_ALL
  139                  | TECH_DEFINE_VERTEX
  140                  | TECH_DEFINE_PIXEL
  141                  | TECH_DEFINE_GEOMETRY

  142 lod_level: NUMBER_LITERAL

  143 lighting_types: TOK_NONE
  144               | TECH_LIGHT_MAPS
  145               | TOK_VERTEX
  146               | TECH_LIGHT_AUTO
  147               | TECH_LIGHT_PIXEL
  148               | TECH_LIGHT_DEFERRED

  149 vertex_decl_usage: VERTEX_DECL_USAGE_POSITION
  150                  | VERTEX_DECL_USAGE_BLENDWEIGHT
  151                  | VERTEX_DECL_USAGE_BLENDINDICES
  152                  | VERTEX_DECL_USAGE_NORMAL
  153                  | VERTEX_DECL_USAGE_TEXCOORD
  154                  | VERTEX_DECL_USAGE_CUSTOM
  155                  | VERTEX_DECL_USAGE_TANGENT
  156                  | VERTEX_DECL_USAGE_COLOUR

  157 vertex_decl_type: VERTEX_DECL_TYPE_R32_FLOAT
  158                 | VERTEX_DECL_TYPE_R32G32_FLOAT
  159                 | VERTEX_DECL_TYPE_R32G32B32_FLOAT
  160                 | VERTEX_DECL_TYPE_R32G32B32A32_FLOAT
  161                 | VERTEX_DECL_TYPE_R8G8B8A8_UNORM
  162                 | VERTEX_DECL_TYPE_R8G8B8A8_UINT
  163                 | VERTEX_DECL_TYPE_R16G16_SINT
  164                 | VERTEX_DECL_TYPE_R16G16B16A16_SINT

  165 optional_string: STRING
  166                | /* empty */

  167 optional_digit: NUMBER_LITERAL
  168               | /* empty */

  169 optional_identifier: IDENTIFIER
  170                    | /* empty */

  171 bool_types: TOK_TRUE
  172           | TOK_FALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
ERROR_TOKEN (258)
IDENTIFIER (259) 6 7 8 12 169
NUMBER_LITERAL (260) 32 69 70 71 126 142 167
STRING (261) 29 39 40 41 42 44 47 56 60 125 165
MATERIAL (262) 6 7
LOD_DISTANCE (263) 19
TECHNIQUE (264) 8 12
MESH_LOD_ENABLE (265) 20
MATERIAL_USER_STRING (266) 11 21
BEGIN_CS (267) 6 7 8 12 33 61 85 86
END_CS (268) 6 7 8 12 33 61 85 86
COLON (269) 7
TECH_LIGHT_MAPS (270) 144
TOK_VERTEX (271) 33 145
TECH_LIGHT_PIXEL (272) 147
TECH_LIGHTING_MODE (273) 45
TECH_LIGHT_DEFERRED (274) 148
TECH_LIGHT_AUTO (275) 146
TECH_SHADING_EFFECT (276) 44
TECH_DEFINE_ALL (277) 138
TECH_DEFINE_VERTEX (278) 139
TECH_DEFINE_PIXEL (279) 140
TECH_DEFINE_GEOMETRY (280) 141
TECH_DEFINE_SHADOW_VERTEX (281)
TOK_NONE (282) 74 118 131 143
TOK_TRUE (283) 171
TOK_FALSE (284) 172
TECH_SHADOW_VERTEX_PROGRAM (285) 42
TECH_VERTEX_PROGRAM (286) 39
TECH_PIXEL_PROGRAM (287) 40
TECH_GEOMETRY_PROGRAM (288) 41
TECH_LOD_LEVEL (289) 46
TECH_GROUP (290) 47
TECH_DISABLED_SHADOW_EFFECTS (291) 43
SAMPLER_MIN_MAG_FILTER (292) 121
SAMPLER_MIP_FILTER (293) 122
SAMPLER_ADDRESS_U (294) 123
SAMPLER_ADDRESS_V (295) 124
SAMPLER_FILTER_LINEAR (296) 127 129
SAMPLER_FILTER_POINT (297) 128 130
SAMPLER_ADDRESSMODE_CLAMP (298) 132
SAMPLER_ADDRESSMODE_WRAP (299) 133
SAMPLER2D (300) 134
SAMPLERCUBE (301) 135
SAMPLER_TEXTURE_FILE (302) 125
SAMPLER_INDEX (303) 126
VERTEX_DECL_USAGE_POSITION (304) 149
VERTEX_DECL_USAGE_BLENDWEIGHT (305) 150
VERTEX_DECL_USAGE_BLENDINDICES (306) 151
VERTEX_DECL_USAGE_COLOUR (307) 156
VERTEX_DECL_USAGE_NORMAL (308) 152
VERTEX_DECL_USAGE_TEXCOORD (309) 153
VERTEX_DECL_USAGE_CUSTOM (310) 154
VERTEX_DECL_USAGE_TANGENT (311) 155
VERTEX_DECL_TYPE_R32_FLOAT (312) 157
VERTEX_DECL_TYPE_R32G32_FLOAT (313) 158
VERTEX_DECL_TYPE_R32G32B32_FLOAT (314) 159
VERTEX_DECL_TYPE_R32G32B32A32_FLOAT (315) 160
VERTEX_DECL_TYPE_R8G8B8A8_UNORM (316) 161
VERTEX_DECL_TYPE_R8G8B8A8_UINT (317) 162
VERTEX_DECL_TYPE_R16G16_SINT (318) 163
VERTEX_DECL_TYPE_R16G16B16A16_SINT (319) 164
BLEND_ENABLED (320) 89
BLEND_STATE_DECLARATION (321) 86
BLEND_SOURCE (322) 90
BLEND_DEST (323) 91
BLEND_OP (324) 92
BLEND_SOURCE_ALPHA (325) 93
BLEND_DEST_ALPHA (326) 94
BLEND_BLEND_OP_ALPHA (327) 95
BLEND_MASK (328) 96
BLEND_OPT_SRC_ALPHA (329) 97
BLEND_OPT_INV_SRC_ALPHA (330) 98
BLEND_OPT_DEST_ALPHA (331) 99
BLEND_OPT_DEST_COLOR (332) 100
BLEND_OPT_INV_DEST_COLOR (333) 107
BLEND_OPT_INV_DEST_ALPHA (334) 101
BLEND_OPT_INV_SRC_COLOR (335) 102
BLEND_OPT_ONE (336) 103
BLEND_OPT_SRC_ALPHA_SAT (337) 104
BLEND_OPT_SRC_COLOR (338) 105
BLEND_OPT_ZERO (339) 106
BLEND_OP_ADD (340) 108
BLEND_OP_MAX (341) 109
BLEND_OP_MIN (342) 110
BLEND_OP_REV_SUBTRACT (343) 111
BLEND_OP_SUBTRACT (344) 112
MASK_RED (345) 113
MASK_GREEN (346) 114
MASK_BLUE (347) 115
MASK_ALPHA (348) 116
MASK_ALL (349) 117
FILL_MODE_WIRE_FRAME (350) 72
FILL_MODE_SOLID (351) 73
CULL_MODE_CW (352) 75
CULL_MODE_CCW (353) 76
DEPTH_CMP_NEVER (354) 77
DEPTH_CMP_LESS (355) 78
DEPTH_CMP_EQUAL (356) 79
DEPTH_CMP_LESS_EQUAL (357) 80
DEPTH_CMP_GREATER (358) 81
DEPTH_CMP_NOT_EQUAL (359) 82
DEPTH_CMP_GREATER_EQUAL (360) 83
DEPTH_CMP_ALWAYS (361) 84
RASTERIZER_DECLARATION (362) 61
RAST_FILL_MODE (363) 64
RAST_CULL_MODE (364) 65
RAST_DEPTH_TEST_ENABLED (365) 66
RAST_DEPTH_WRITE_ENABLED (366) 67
RAST_DEPTH_CMP (367) 68
RAST_DEPTH_BIAS (368) 69
RAST_DEPTH_BIAS_CLAMP (369) 70
RAST_SLOPE_SCALED_DEPTH_BIAS (370) 71


Nonterminals, with rules where they appear

$accept (116)
    on left: 0
program_entry (117)
    on left: 2 3, on right: 0
@1 (118)
    on left: 1, on right: 2
program_list (119)
    on left: 4 5, on right: 2 5
program (120)
    on left: 6 7, on right: 4 5
technique_declaration (121)
    on left: 8, on right: 23
material_ref_statement_list (122)
    on left: 9 10, on right: 7 10
material_ref_statement (123)
    on left: 11 12 13, on right: 9 10
technique_ref_statement_list (124)
    on left: 14 15, on right: 12 15
technique_ref_statement (125)
    on left: 16, on right: 14 15
material_statement_list (126)
    on left: 17 18, on right: 6 18
material_statement (127)
    on left: 19 20 21 22 23 24 25 26, on right: 17 18
user_string_list (128)
    on left: 27 28, on right: 11 21 28
user_string (129)
    on left: 29, on right: 27 28
lod_distace_list (130)
    on left: 30 31, on right: 19 31
lod_distace (131)
    on left: 32, on right: 30 31
vertex_declaration (132)
    on left: 33, on right: 22 50
vertex_element_list (133)
    on left: 34 35, on right: 33 35
vertex_element (134)
    on left: 36, on right: 34 35
technique_statement_list (135)
    on left: 37 38, on right: 8 38
technique_statement (136)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52,
    on right: 37 38
technique_shadow_effect_string_list (137)
    on left: 53 54 55, on right: 43 55
technique_shadow_effect_string (138)
    on left: 56, on right: 54 55
technique_define_string_list (139)
    on left: 57 58 59, on right: 48 59
technique_define_string (140)
    on left: 60, on right: 58 59
rasterizer_declaration (141)
    on left: 61, on right: 25 52
rasterizer_state_list (142)
    on left: 62 63, on right: 61 63
rasterizer_states (143)
    on left: 64 65 66 67 68 69 70 71, on right: 62 63
fill_modes (144)
    on left: 72 73, on right: 64
cull_modes (145)
    on left: 74 75 76, on right: 65
depth_cmps (146)
    on left: 77 78 79 80 81 82 83 84, on right: 68
sampler_declaration (147)
    on left: 85, on right: 13 16 26 49
blend_state_declaration (148)
    on left: 86, on right: 24 51
blend_state_list (149)
    on left: 87 88, on right: 86 88
blend_state (150)
    on left: 89 90 91 92 93 94 95 96, on right: 87 88
blend_states_opts (151)
    on left: 97 98 99 100 101 102 103 104 105 106 107,
    on right: 90 91 93 94
blend_operations (152)
    on left: 108 109 110 111 112, on right: 92 95
write_mask (153)
    on left: 113 114 115 116 117 118, on right: 96
sampler_statement_list (154)
    on left: 119 120, on right: 85 120
sampler_statement (155)
    on left: 121 122 123 124 125 126, on right: 119 120
sampler_filter_method_types (156)
    on left: 127 128, on right: 121
sampler_filter_method_mip_types (157)
    on left: 129 130 131, on right: 122
texture_address_method_type (158)
    on left: 132 133, on right: 123 124
sampler_type (159)
    on left: 134 135, on right: 85
lod_level_list (160)
    on left: 136 137, on right: 46 137
technique_defines (161)
    on left: 138 139 140 141, on right: 48
lod_level (162)
    on left: 142, on right: 136 137
lighting_types (163)
    on left: 143 144 145 146 147 148, on right: 45
vertex_decl_usage (164)
    on left: 149 150 151 152 153 154 155 156, on right: 36
vertex_decl_type (165)
    on left: 157 158 159 160 161 162 163 164, on right: 36
optional_string (166)
    on left: 165 166, on right: 39 40 41 42
optional_digit (167)
    on left: 167 168, on right: 36
optional_identifier (168)
    on left: 169 170, on right: 85
bool_types (169)
    on left: 171 172, on right: 20 66 67 89


state 0

    0 $accept: . program_entry $end

    $end      reduce using rule 3 (program_entry)
    $default  reduce using rule 1 (@1)

    program_entry  go to state 1
    @1             go to state 2


state 1

    0 $accept: program_entry . $end

    $end  shift, and go to state 3


state 2

    2 program_entry: @1 . program_list

    MATERIAL  shift, and go to state 4

    program_list  go to state 5
    program       go to state 6


state 3

    0 $accept: program_entry $end .

    $default  accept


state 4

    6 program: MATERIAL . IDENTIFIER BEGIN_CS material_statement_list END_CS
    7        | MATERIAL . IDENTIFIER COLON IDENTIFIER BEGIN_CS material_ref_statement_list END_CS

    IDENTIFIER  shift, and go to state 7


state 5

    2 program_entry: @1 program_list .
    5 program_list: program_list . program

    MATERIAL  shift, and go to state 4

    $default  reduce using rule 2 (program_entry)

    program  go to state 8


state 6

    4 program_list: program .

    $default  reduce using rule 4 (program_list)


state 7

    6 program: MATERIAL IDENTIFIER . BEGIN_CS material_statement_list END_CS
    7        | MATERIAL IDENTIFIER . COLON IDENTIFIER BEGIN_CS material_ref_statement_list END_CS

    BEGIN_CS  shift, and go to state 9
    COLON     shift, and go to state 10


state 8

    5 program_list: program_list program .

    $default  reduce using rule 5 (program_list)


state 9

    6 program: MATERIAL IDENTIFIER BEGIN_CS . material_statement_list END_CS

    LOD_DISTANCE             shift, and go to state 11
    TECHNIQUE                shift, and go to state 12
    MESH_LOD_ENABLE          shift, and go to state 13
    MATERIAL_USER_STRING     shift, and go to state 14
    TOK_VERTEX               shift, and go to state 15
    SAMPLER2D                shift, and go to state 16
    SAMPLERCUBE              shift, and go to state 17
    BLEND_STATE_DECLARATION  shift, and go to state 18
    RASTERIZER_DECLARATION   shift, and go to state 19

    technique_declaration    go to state 20
    material_statement_list  go to state 21
    material_statement       go to state 22
    vertex_declaration       go to state 23
    rasterizer_declaration   go to state 24
    sampler_declaration      go to state 25
    blend_state_declaration  go to state 26
    sampler_type             go to state 27


state 10

    7 program: MATERIAL IDENTIFIER COLON . IDENTIFIER BEGIN_CS material_ref_statement_list END_CS

    IDENTIFIER  shift, and go to state 28


state 11

   19 material_statement: LOD_DISTANCE . lod_distace_list

    NUMBER_LITERAL  shift, and go to state 29

    lod_distace_list  go to state 30
    lod_distace       go to state 31


state 12

    8 technique_declaration: TECHNIQUE . IDENTIFIER BEGIN_CS technique_statement_list END_CS

    IDENTIFIER  shift, and go to state 32


state 13

   20 material_statement: MESH_LOD_ENABLE . bool_types

    TOK_TRUE   shift, and go to state 33
    TOK_FALSE  shift, and go to state 34

    bool_types  go to state 35


state 14

   21 material_statement: MATERIAL_USER_STRING . user_string_list

    STRING  shift, and go to state 36

    user_string_list  go to state 37
    user_string       go to state 38


state 15

   33 vertex_declaration: TOK_VERTEX . BEGIN_CS vertex_element_list END_CS

    BEGIN_CS  shift, and go to state 39


state 16

  134 sampler_type: SAMPLER2D .

    $default  reduce using rule 134 (sampler_type)


state 17

  135 sampler_type: SAMPLERCUBE .

    $default  reduce using rule 135 (sampler_type)


state 18

   86 blend_state_declaration: BLEND_STATE_DECLARATION . BEGIN_CS blend_state_list END_CS

    BEGIN_CS  shift, and go to state 40


state 19

   61 rasterizer_declaration: RASTERIZER_DECLARATION . BEGIN_CS rasterizer_state_list END_CS

    BEGIN_CS  shift, and go to state 41


state 20

   23 material_statement: technique_declaration .

    $default  reduce using rule 23 (material_statement)


state 21

    6 program: MATERIAL IDENTIFIER BEGIN_CS material_statement_list . END_CS
   18 material_statement_list: material_statement_list . material_statement

    LOD_DISTANCE             shift, and go to state 11
    TECHNIQUE                shift, and go to state 12
    MESH_LOD_ENABLE          shift, and go to state 13
    MATERIAL_USER_STRING     shift, and go to state 14
    END_CS                   shift, and go to state 42
    TOK_VERTEX               shift, and go to state 15
    SAMPLER2D                shift, and go to state 16
    SAMPLERCUBE              shift, and go to state 17
    BLEND_STATE_DECLARATION  shift, and go to state 18
    RASTERIZER_DECLARATION   shift, and go to state 19

    technique_declaration    go to state 20
    material_statement       go to state 43
    vertex_declaration       go to state 23
    rasterizer_declaration   go to state 24
    sampler_declaration      go to state 25
    blend_state_declaration  go to state 26
    sampler_type             go to state 27


state 22

   17 material_statement_list: material_statement .

    $default  reduce using rule 17 (material_statement_list)


state 23

   22 material_statement: vertex_declaration .

    $default  reduce using rule 22 (material_statement)


state 24

   25 material_statement: rasterizer_declaration .

    $default  reduce using rule 25 (material_statement)


state 25

   26 material_statement: sampler_declaration .

    $default  reduce using rule 26 (material_statement)


state 26

   24 material_statement: blend_state_declaration .

    $default  reduce using rule 24 (material_statement)


state 27

   85 sampler_declaration: sampler_type . optional_identifier BEGIN_CS sampler_statement_list END_CS

    IDENTIFIER  shift, and go to state 44

    $default  reduce using rule 170 (optional_identifier)

    optional_identifier  go to state 45


state 28

    7 program: MATERIAL IDENTIFIER COLON IDENTIFIER . BEGIN_CS material_ref_statement_list END_CS

    BEGIN_CS  shift, and go to state 46


state 29

   32 lod_distace: NUMBER_LITERAL .

    $default  reduce using rule 32 (lod_distace)


state 30

   19 material_statement: LOD_DISTANCE lod_distace_list .
   31 lod_distace_list: lod_distace_list . lod_distace

    NUMBER_LITERAL  shift, and go to state 29

    $default  reduce using rule 19 (material_statement)

    lod_distace  go to state 47


state 31

   30 lod_distace_list: lod_distace .

    $default  reduce using rule 30 (lod_distace_list)


state 32

    8 technique_declaration: TECHNIQUE IDENTIFIER . BEGIN_CS technique_statement_list END_CS

    BEGIN_CS  shift, and go to state 48


state 33

  171 bool_types: TOK_TRUE .

    $default  reduce using rule 171 (bool_types)


state 34

  172 bool_types: TOK_FALSE .

    $default  reduce using rule 172 (bool_types)


state 35

   20 material_statement: MESH_LOD_ENABLE bool_types .

    $default  reduce using rule 20 (material_statement)


state 36

   29 user_string: STRING .

    $default  reduce using rule 29 (user_string)


state 37

   21 material_statement: MATERIAL_USER_STRING user_string_list .
   28 user_string_list: user_string_list . user_string

    STRING  shift, and go to state 36

    $default  reduce using rule 21 (material_statement)

    user_string  go to state 49


state 38

   27 user_string_list: user_string .

    $default  reduce using rule 27 (user_string_list)


state 39

   33 vertex_declaration: TOK_VERTEX BEGIN_CS . vertex_element_list END_CS

    VERTEX_DECL_USAGE_POSITION      shift, and go to state 50
    VERTEX_DECL_USAGE_BLENDWEIGHT   shift, and go to state 51
    VERTEX_DECL_USAGE_BLENDINDICES  shift, and go to state 52
    VERTEX_DECL_USAGE_COLOUR        shift, and go to state 53
    VERTEX_DECL_USAGE_NORMAL        shift, and go to state 54
    VERTEX_DECL_USAGE_TEXCOORD      shift, and go to state 55
    VERTEX_DECL_USAGE_CUSTOM        shift, and go to state 56
    VERTEX_DECL_USAGE_TANGENT       shift, and go to state 57

    vertex_element_list  go to state 58
    vertex_element       go to state 59
    vertex_decl_usage    go to state 60


state 40

   86 blend_state_declaration: BLEND_STATE_DECLARATION BEGIN_CS . blend_state_list END_CS

    BLEND_ENABLED         shift, and go to state 61
    BLEND_SOURCE          shift, and go to state 62
    BLEND_DEST            shift, and go to state 63
    BLEND_OP              shift, and go to state 64
    BLEND_SOURCE_ALPHA    shift, and go to state 65
    BLEND_DEST_ALPHA      shift, and go to state 66
    BLEND_BLEND_OP_ALPHA  shift, and go to state 67
    BLEND_MASK            shift, and go to state 68

    blend_state_list  go to state 69
    blend_state       go to state 70


state 41

   61 rasterizer_declaration: RASTERIZER_DECLARATION BEGIN_CS . rasterizer_state_list END_CS

    RAST_FILL_MODE                shift, and go to state 71
    RAST_CULL_MODE                shift, and go to state 72
    RAST_DEPTH_TEST_ENABLED       shift, and go to state 73
    RAST_DEPTH_WRITE_ENABLED      shift, and go to state 74
    RAST_DEPTH_CMP                shift, and go to state 75
    RAST_DEPTH_BIAS               shift, and go to state 76
    RAST_DEPTH_BIAS_CLAMP         shift, and go to state 77
    RAST_SLOPE_SCALED_DEPTH_BIAS  shift, and go to state 78

    rasterizer_state_list  go to state 79
    rasterizer_states      go to state 80


state 42

    6 program: MATERIAL IDENTIFIER BEGIN_CS material_statement_list END_CS .

    $default  reduce using rule 6 (program)


state 43

   18 material_statement_list: material_statement_list material_statement .

    $default  reduce using rule 18 (material_statement_list)


state 44

  169 optional_identifier: IDENTIFIER .

    $default  reduce using rule 169 (optional_identifier)


state 45

   85 sampler_declaration: sampler_type optional_identifier . BEGIN_CS sampler_statement_list END_CS

    BEGIN_CS  shift, and go to state 81


state 46

    7 program: MATERIAL IDENTIFIER COLON IDENTIFIER BEGIN_CS . material_ref_statement_list END_CS

    TECHNIQUE             shift, and go to state 82
    MATERIAL_USER_STRING  shift, and go to state 83
    SAMPLER2D             shift, and go to state 16
    SAMPLERCUBE           shift, and go to state 17

    material_ref_statement_list  go to state 84
    material_ref_statement       go to state 85
    sampler_declaration          go to state 86
    sampler_type                 go to state 27


state 47

   31 lod_distace_list: lod_distace_list lod_distace .

    $default  reduce using rule 31 (lod_distace_list)


state 48

    8 technique_declaration: TECHNIQUE IDENTIFIER BEGIN_CS . technique_statement_list END_CS

    TOK_VERTEX                    shift, and go to state 15
    TECH_LIGHTING_MODE            shift, and go to state 87
    TECH_SHADING_EFFECT           shift, and go to state 88
    TECH_DEFINE_ALL               shift, and go to state 89
    TECH_DEFINE_VERTEX            shift, and go to state 90
    TECH_DEFINE_PIXEL             shift, and go to state 91
    TECH_DEFINE_GEOMETRY          shift, and go to state 92
    TECH_SHADOW_VERTEX_PROGRAM    shift, and go to state 93
    TECH_VERTEX_PROGRAM           shift, and go to state 94
    TECH_PIXEL_PROGRAM            shift, and go to state 95
    TECH_GEOMETRY_PROGRAM         shift, and go to state 96
    TECH_LOD_LEVEL                shift, and go to state 97
    TECH_GROUP                    shift, and go to state 98
    TECH_DISABLED_SHADOW_EFFECTS  shift, and go to state 99
    SAMPLER2D                     shift, and go to state 16
    SAMPLERCUBE                   shift, and go to state 17
    BLEND_STATE_DECLARATION       shift, and go to state 18
    RASTERIZER_DECLARATION        shift, and go to state 19

    vertex_declaration        go to state 100
    technique_statement_list  go to state 101
    technique_statement       go to state 102
    rasterizer_declaration    go to state 103
    sampler_declaration       go to state 104
    blend_state_declaration   go to state 105
    sampler_type              go to state 27
    technique_defines         go to state 106


state 49

   28 user_string_list: user_string_list user_string .

    $default  reduce using rule 28 (user_string_list)


state 50

  149 vertex_decl_usage: VERTEX_DECL_USAGE_POSITION .

    $default  reduce using rule 149 (vertex_decl_usage)


state 51

  150 vertex_decl_usage: VERTEX_DECL_USAGE_BLENDWEIGHT .

    $default  reduce using rule 150 (vertex_decl_usage)


state 52

  151 vertex_decl_usage: VERTEX_DECL_USAGE_BLENDINDICES .

    $default  reduce using rule 151 (vertex_decl_usage)


state 53

  156 vertex_decl_usage: VERTEX_DECL_USAGE_COLOUR .

    $default  reduce using rule 156 (vertex_decl_usage)


state 54

  152 vertex_decl_usage: VERTEX_DECL_USAGE_NORMAL .

    $default  reduce using rule 152 (vertex_decl_usage)


state 55

  153 vertex_decl_usage: VERTEX_DECL_USAGE_TEXCOORD .

    $default  reduce using rule 153 (vertex_decl_usage)


state 56

  154 vertex_decl_usage: VERTEX_DECL_USAGE_CUSTOM .

    $default  reduce using rule 154 (vertex_decl_usage)


state 57

  155 vertex_decl_usage: VERTEX_DECL_USAGE_TANGENT .

    $default  reduce using rule 155 (vertex_decl_usage)


state 58

   33 vertex_declaration: TOK_VERTEX BEGIN_CS vertex_element_list . END_CS
   35 vertex_element_list: vertex_element_list . vertex_element

    END_CS                          shift, and go to state 107
    VERTEX_DECL_USAGE_POSITION      shift, and go to state 50
    VERTEX_DECL_USAGE_BLENDWEIGHT   shift, and go to state 51
    VERTEX_DECL_USAGE_BLENDINDICES  shift, and go to state 52
    VERTEX_DECL_USAGE_COLOUR        shift, and go to state 53
    VERTEX_DECL_USAGE_NORMAL        shift, and go to state 54
    VERTEX_DECL_USAGE_TEXCOORD      shift, and go to state 55
    VERTEX_DECL_USAGE_CUSTOM        shift, and go to state 56
    VERTEX_DECL_USAGE_TANGENT       shift, and go to state 57

    vertex_element     go to state 108
    vertex_decl_usage  go to state 60


state 59

   34 vertex_element_list: vertex_element .

    $default  reduce using rule 34 (vertex_element_list)


state 60

   36 vertex_element: vertex_decl_usage . vertex_decl_type optional_digit optional_digit

    VERTEX_DECL_TYPE_R32_FLOAT           shift, and go to state 109
    VERTEX_DECL_TYPE_R32G32_FLOAT        shift, and go to state 110
    VERTEX_DECL_TYPE_R32G32B32_FLOAT     shift, and go to state 111
    VERTEX_DECL_TYPE_R32G32B32A32_FLOAT  shift, and go to state 112
    VERTEX_DECL_TYPE_R8G8B8A8_UNORM      shift, and go to state 113
    VERTEX_DECL_TYPE_R8G8B8A8_UINT       shift, and go to state 114
    VERTEX_DECL_TYPE_R16G16_SINT         shift, and go to state 115
    VERTEX_DECL_TYPE_R16G16B16A16_SINT   shift, and go to state 116

    vertex_decl_type  go to state 117


state 61

   89 blend_state: BLEND_ENABLED . bool_types

    TOK_TRUE   shift, and go to state 33
    TOK_FALSE  shift, and go to state 34

    bool_types  go to state 118


state 62

   90 blend_state: BLEND_SOURCE . blend_states_opts
